# uniprotpy

./: .gitignore  README.md  extract_proteomes.py  protein_tree.py  pyproject.toml  requirements.txt  select_proteome.py  setup.py  taxon_tree.py  taxons.txt
.github/workflows/: unit_tests.yml
notebooks/.ipynb_checkpoints/: human-checkpoint.ipynb
tests/: test_database.py  test_parser.py
uniprotpy/: __init__.py  database.py  helpers.py  models.py  parser.py  protein_tree.py  proteome_selector.py  select_best_proteome.py  shell.py
